// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getApprovalDialogHtml snapshots (Issue #1242) > auto-accept state — pr-create stage 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta http-equiv="Content-Security-Policy" content="default-src 'none'; style-src test-csp 'unsafe-inline'; script-src 'nonce-NONCE';">
  <title>Review Plan #1337</title>
  <style>
    
    :root {
      --spacing-xs: 4px;
      --spacing-sm: 8px;
      --spacing-md: 16px;
      --spacing-lg: 24px;
      --spacing-xl: 32px;
      --border-radius: 4px;
    }

    * {
      box-sizing: border-box;
      margin: 0;
      padding: 0;
    }

    body {
      font-family: var(--vscode-font-family);
      font-size: var(--vscode-font-size);
      color: var(--vscode-foreground);
      background: var(--vscode-editor-background);
      line-height: 1.6;
      padding: 0;
      margin: 0;
      height: 100vh;
      display: flex;
      flex-direction: column;
    }

    .approval-dialog {
      display: flex;
      flex-direction: column;
      height: 100%;
      max-width: 900px;
      margin: 0 auto;
      padding: var(--spacing-md);
    }

    /* Header */
    .dialog-header {
      padding-bottom: var(--spacing-md);
      border-bottom: 1px solid var(--vscode-panel-border);
      margin-bottom: var(--spacing-md);
    }

    .dialog-header h1 {
      font-size: 1.4em;
      font-weight: 600;
      color: var(--vscode-foreground);
      display: flex;
      align-items: center;
      gap: var(--spacing-sm);
    }

    .dialog-header h1 .codicon {
      color: var(--vscode-symbolIcon-fieldForeground);
    }

    .stage-info {
      margin-top: var(--spacing-sm);
      color: var(--vscode-descriptionForeground);
      font-size: 0.9em;
    }

    .stage-badge {
      display: inline-block;
      background: var(--vscode-badge-background);
      color: var(--vscode-badge-foreground);
      padding: 2px 8px;
      border-radius: var(--border-radius);
      font-weight: 500;
      font-size: 0.85em;
    }

    /* Plan Content */
    .plan-content {
      flex: 1;
      overflow-y: auto;
      padding: var(--spacing-md);
      background: var(--vscode-editor-background);
      border: 1px solid var(--vscode-panel-border);
      border-radius: var(--border-radius);
      margin-bottom: var(--spacing-md);
    }

    /* Markdown Styling */
    .plan-content h1,
    .plan-content h2,
    .plan-content h3,
    .plan-content h4,
    .plan-content h5,
    .plan-content h6 {
      margin-top: var(--spacing-lg);
      margin-bottom: var(--spacing-sm);
      font-weight: 600;
      color: var(--vscode-foreground);
    }

    .plan-content h1 { font-size: 1.5em; border-bottom: 1px solid var(--vscode-panel-border); padding-bottom: var(--spacing-sm); }
    .plan-content h2 { font-size: 1.3em; }
    .plan-content h3 { font-size: 1.1em; }
    .plan-content h4 { font-size: 1em; }

    .plan-content h1:first-child,
    .plan-content h2:first-child,
    .plan-content h3:first-child {
      margin-top: 0;
    }

    .plan-content p {
      margin-bottom: var(--spacing-md);
    }

    .plan-content ul,
    .plan-content ol {
      margin-bottom: var(--spacing-md);
      padding-left: var(--spacing-lg);
    }

    .plan-content li {
      margin-bottom: var(--spacing-xs);
    }

    .plan-content li input[type="checkbox"] {
      margin-right: var(--spacing-sm);
    }

    .plan-content a {
      color: var(--vscode-textLink-foreground);
      text-decoration: none;
    }

    .plan-content a:hover {
      text-decoration: underline;
    }

    .plan-content code {
      font-family: var(--vscode-editor-font-family);
      font-size: 0.9em;
      background: var(--vscode-textCodeBlock-background);
      padding: 2px 6px;
      border-radius: 3px;
    }

    .plan-content pre {
      background: var(--vscode-textCodeBlock-background);
      padding: var(--spacing-md);
      border-radius: var(--border-radius);
      overflow-x: auto;
      margin-bottom: var(--spacing-md);
    }

    .plan-content pre code {
      background: transparent;
      padding: 0;
      font-size: 0.85em;
      line-height: 1.5;
    }

    .plan-content blockquote {
      border-left: 4px solid var(--vscode-textBlockQuote-border);
      padding-left: var(--spacing-md);
      margin: var(--spacing-md) 0;
      color: var(--vscode-textBlockQuote-foreground);
    }

    .plan-content table {
      border-collapse: collapse;
      width: 100%;
      margin-bottom: var(--spacing-md);
    }

    .plan-content th,
    .plan-content td {
      border: 1px solid var(--vscode-panel-border);
      padding: var(--spacing-sm) var(--spacing-md);
      text-align: left;
    }

    .plan-content th {
      background: var(--vscode-editorWidget-background);
      font-weight: 600;
    }

    .plan-content tr:nth-child(even) {
      background: var(--vscode-list-hoverBackground);
    }

    .plan-content hr {
      border: none;
      border-top: 1px solid var(--vscode-panel-border);
      margin: var(--spacing-lg) 0;
    }

    .plan-content img {
      max-width: 100%;
      height: auto;
    }

    /* Actions Footer */
    .actions {
      display: flex;
      gap: var(--spacing-sm);
      padding-top: var(--spacing-md);
      border-top: 1px solid var(--vscode-panel-border);
      flex-wrap: wrap;
    }

    .action-button {
      display: inline-flex;
      align-items: center;
      gap: var(--spacing-sm);
      padding: var(--spacing-sm) var(--spacing-md);
      border: none;
      border-radius: var(--border-radius);
      font-family: var(--vscode-font-family);
      font-size: var(--vscode-font-size);
      cursor: pointer;
      transition: background-color 0.15s, opacity 0.15s;
    }

    .action-button:hover {
      opacity: 0.9;
    }

    .action-button:active {
      opacity: 0.8;
    }

    .action-button:focus {
      outline: 2px solid var(--vscode-focusBorder);
      outline-offset: 2px;
    }

    .action-button.primary {
      background: var(--vscode-button-background);
      color: var(--vscode-button-foreground);
    }

    .action-button.primary:hover {
      background: var(--vscode-button-hoverBackground);
    }

    .action-button.secondary {
      background: var(--vscode-button-secondaryBackground);
      color: var(--vscode-button-secondaryForeground);
    }

    .action-button.secondary:hover {
      background: var(--vscode-button-secondaryHoverBackground);
    }

    .action-button.danger {
      background: var(--vscode-inputValidation-errorBackground);
      color: var(--vscode-inputValidation-errorForeground);
      border: 1px solid var(--vscode-inputValidation-errorBorder);
    }

    .action-button.danger:hover {
      opacity: 0.85;
    }

    /* Codicon placeholder - using unicode for icons */
    .codicon::before {
      font-family: codicon;
      font-size: 14px;
    }

    .codicon-check::before { content: "\\eab2"; }
    .codicon-edit::before { content: "\\ea73"; }
    .codicon-debug-step-over::before { content: "\\eb09"; }
    .codicon-close::before { content: "\\ea76"; }
    .codicon-checklist::before { content: "\\eb02"; }

    /* Responsive */
    @media (max-width: 600px) {
      .actions {
        flex-direction: column;
      }

      .action-button {
        width: 100%;
        justify-content: center;
      }
    }
  
  </style>
</head>
<body>
  <div class="approval-dialog">
    <header class="dialog-header">
      <h1>
        <span class="codicon codicon-checklist"></span>
        Review Plan for Issue #1337
      </h1>
      <p class="stage-info">
        <span class="stage-badge">PR Creation</span>
        requires approval before continuing
      </p>
    </header>

    <main class="plan-content" id="planContent">
      <h1>PR Ready</h1>
<p>All checks passed. PR will be created automatically.</p>

    </main>

    <footer class="actions">
      <button class="action-button primary" data-action="approve" title="Approve plan and continue pipeline">
        <span class="codicon codicon-check"></span>
        Approve
      </button>
      <button class="action-button secondary" data-action="edit" title="Open plan file in editor">
        <span class="codicon codicon-edit"></span>
        Edit Plan
      </button>
      <button class="action-button secondary" data-action="skip" title="Skip this stage and continue">
        <span class="codicon codicon-debug-step-over"></span>
        Skip Stage
      </button>
      <button class="action-button danger" data-action="cancel" title="Cancel and abort pipeline">
        <span class="codicon codicon-close"></span>
        Cancel
      </button>
    </footer>
  </div>

  <script nonce="NONCE">
    
    (function() {
      const vscode = acquireVsCodeApi();

      // Handle button clicks
      document.querySelectorAll('.action-button').forEach(button => {
        button.addEventListener('click', () => {
          const action = button.getAttribute('data-action');
          if (action) {
            vscode.postMessage({
              type: 'action',
              action: action
            });
          }
        });
      });

      // Handle keyboard shortcuts
      document.addEventListener('keydown', (e) => {
        // Enter = Approve
        if (e.key === 'Enter' && !e.shiftKey && !e.ctrlKey && !e.metaKey) {
          vscode.postMessage({ type: 'action', action: 'approve' });
        }
        // Escape = Cancel
        if (e.key === 'Escape') {
          vscode.postMessage({ type: 'action', action: 'cancel' });
        }
      });

      // Handle content updates from extension
      window.addEventListener('message', event => {
        const message = event.data;
        if (message.type === 'update') {
          const contentEl = document.getElementById('planContent');
          if (contentEl) {
            contentEl.innerHTML = message.content;
          }
        }
      });
    })();
  
  </script>
</body>
</html>"
`;

exports[`getApprovalDialogHtml snapshots (Issue #1242) > plan content rendered — feature-dev stage 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta http-equiv="Content-Security-Policy" content="default-src 'none'; style-src test-csp 'unsafe-inline'; script-src 'nonce-NONCE';">
  <title>Review Plan #99</title>
  <style>
    
    :root {
      --spacing-xs: 4px;
      --spacing-sm: 8px;
      --spacing-md: 16px;
      --spacing-lg: 24px;
      --spacing-xl: 32px;
      --border-radius: 4px;
    }

    * {
      box-sizing: border-box;
      margin: 0;
      padding: 0;
    }

    body {
      font-family: var(--vscode-font-family);
      font-size: var(--vscode-font-size);
      color: var(--vscode-foreground);
      background: var(--vscode-editor-background);
      line-height: 1.6;
      padding: 0;
      margin: 0;
      height: 100vh;
      display: flex;
      flex-direction: column;
    }

    .approval-dialog {
      display: flex;
      flex-direction: column;
      height: 100%;
      max-width: 900px;
      margin: 0 auto;
      padding: var(--spacing-md);
    }

    /* Header */
    .dialog-header {
      padding-bottom: var(--spacing-md);
      border-bottom: 1px solid var(--vscode-panel-border);
      margin-bottom: var(--spacing-md);
    }

    .dialog-header h1 {
      font-size: 1.4em;
      font-weight: 600;
      color: var(--vscode-foreground);
      display: flex;
      align-items: center;
      gap: var(--spacing-sm);
    }

    .dialog-header h1 .codicon {
      color: var(--vscode-symbolIcon-fieldForeground);
    }

    .stage-info {
      margin-top: var(--spacing-sm);
      color: var(--vscode-descriptionForeground);
      font-size: 0.9em;
    }

    .stage-badge {
      display: inline-block;
      background: var(--vscode-badge-background);
      color: var(--vscode-badge-foreground);
      padding: 2px 8px;
      border-radius: var(--border-radius);
      font-weight: 500;
      font-size: 0.85em;
    }

    /* Plan Content */
    .plan-content {
      flex: 1;
      overflow-y: auto;
      padding: var(--spacing-md);
      background: var(--vscode-editor-background);
      border: 1px solid var(--vscode-panel-border);
      border-radius: var(--border-radius);
      margin-bottom: var(--spacing-md);
    }

    /* Markdown Styling */
    .plan-content h1,
    .plan-content h2,
    .plan-content h3,
    .plan-content h4,
    .plan-content h5,
    .plan-content h6 {
      margin-top: var(--spacing-lg);
      margin-bottom: var(--spacing-sm);
      font-weight: 600;
      color: var(--vscode-foreground);
    }

    .plan-content h1 { font-size: 1.5em; border-bottom: 1px solid var(--vscode-panel-border); padding-bottom: var(--spacing-sm); }
    .plan-content h2 { font-size: 1.3em; }
    .plan-content h3 { font-size: 1.1em; }
    .plan-content h4 { font-size: 1em; }

    .plan-content h1:first-child,
    .plan-content h2:first-child,
    .plan-content h3:first-child {
      margin-top: 0;
    }

    .plan-content p {
      margin-bottom: var(--spacing-md);
    }

    .plan-content ul,
    .plan-content ol {
      margin-bottom: var(--spacing-md);
      padding-left: var(--spacing-lg);
    }

    .plan-content li {
      margin-bottom: var(--spacing-xs);
    }

    .plan-content li input[type="checkbox"] {
      margin-right: var(--spacing-sm);
    }

    .plan-content a {
      color: var(--vscode-textLink-foreground);
      text-decoration: none;
    }

    .plan-content a:hover {
      text-decoration: underline;
    }

    .plan-content code {
      font-family: var(--vscode-editor-font-family);
      font-size: 0.9em;
      background: var(--vscode-textCodeBlock-background);
      padding: 2px 6px;
      border-radius: 3px;
    }

    .plan-content pre {
      background: var(--vscode-textCodeBlock-background);
      padding: var(--spacing-md);
      border-radius: var(--border-radius);
      overflow-x: auto;
      margin-bottom: var(--spacing-md);
    }

    .plan-content pre code {
      background: transparent;
      padding: 0;
      font-size: 0.85em;
      line-height: 1.5;
    }

    .plan-content blockquote {
      border-left: 4px solid var(--vscode-textBlockQuote-border);
      padding-left: var(--spacing-md);
      margin: var(--spacing-md) 0;
      color: var(--vscode-textBlockQuote-foreground);
    }

    .plan-content table {
      border-collapse: collapse;
      width: 100%;
      margin-bottom: var(--spacing-md);
    }

    .plan-content th,
    .plan-content td {
      border: 1px solid var(--vscode-panel-border);
      padding: var(--spacing-sm) var(--spacing-md);
      text-align: left;
    }

    .plan-content th {
      background: var(--vscode-editorWidget-background);
      font-weight: 600;
    }

    .plan-content tr:nth-child(even) {
      background: var(--vscode-list-hoverBackground);
    }

    .plan-content hr {
      border: none;
      border-top: 1px solid var(--vscode-panel-border);
      margin: var(--spacing-lg) 0;
    }

    .plan-content img {
      max-width: 100%;
      height: auto;
    }

    /* Actions Footer */
    .actions {
      display: flex;
      gap: var(--spacing-sm);
      padding-top: var(--spacing-md);
      border-top: 1px solid var(--vscode-panel-border);
      flex-wrap: wrap;
    }

    .action-button {
      display: inline-flex;
      align-items: center;
      gap: var(--spacing-sm);
      padding: var(--spacing-sm) var(--spacing-md);
      border: none;
      border-radius: var(--border-radius);
      font-family: var(--vscode-font-family);
      font-size: var(--vscode-font-size);
      cursor: pointer;
      transition: background-color 0.15s, opacity 0.15s;
    }

    .action-button:hover {
      opacity: 0.9;
    }

    .action-button:active {
      opacity: 0.8;
    }

    .action-button:focus {
      outline: 2px solid var(--vscode-focusBorder);
      outline-offset: 2px;
    }

    .action-button.primary {
      background: var(--vscode-button-background);
      color: var(--vscode-button-foreground);
    }

    .action-button.primary:hover {
      background: var(--vscode-button-hoverBackground);
    }

    .action-button.secondary {
      background: var(--vscode-button-secondaryBackground);
      color: var(--vscode-button-secondaryForeground);
    }

    .action-button.secondary:hover {
      background: var(--vscode-button-secondaryHoverBackground);
    }

    .action-button.danger {
      background: var(--vscode-inputValidation-errorBackground);
      color: var(--vscode-inputValidation-errorForeground);
      border: 1px solid var(--vscode-inputValidation-errorBorder);
    }

    .action-button.danger:hover {
      opacity: 0.85;
    }

    /* Codicon placeholder - using unicode for icons */
    .codicon::before {
      font-family: codicon;
      font-size: 14px;
    }

    .codicon-check::before { content: "\\eab2"; }
    .codicon-edit::before { content: "\\ea73"; }
    .codicon-debug-step-over::before { content: "\\eb09"; }
    .codicon-close::before { content: "\\ea76"; }
    .codicon-checklist::before { content: "\\eb02"; }

    /* Responsive */
    @media (max-width: 600px) {
      .actions {
        flex-direction: column;
      }

      .action-button {
        width: 100%;
        justify-content: center;
      }
    }
  
  </style>
</head>
<body>
  <div class="approval-dialog">
    <header class="dialog-header">
      <h1>
        <span class="codicon codicon-checklist"></span>
        Review Plan for Issue #99
      </h1>
      <p class="stage-info">
        <span class="stage-badge">Feature Development</span>
        requires approval before continuing
      </p>
    </header>

    <main class="plan-content" id="planContent">
      <h1>Detailed Implementation Plan for Issue #99</h1>
<h2>Background</h2>
<p>This is a comprehensive plan covering multiple components and requiring<br>careful coordination across multiple files and services.</p>
<h2>Approach</h2>
<p>Use a layered architecture with clear separation of concerns.</p>
<h3>Layer 1: Data Access</h3>
<ul>
<li>Repository pattern for all DB operations</li>
<li>Parameterized queries only</li>
<li>Transaction support</li>
</ul>
<h3>Layer 2: Business Logic</h3>
<ul>
<li>Service classes with single responsibility</li>
<li>Input validation at service boundaries</li>
<li>Error types mapped to HTTP status codes</li>
</ul>
<h3>Layer 3: API</h3>
<ul>
<li>RESTful endpoints</li>
<li>Request/response DTOs with Zod validation</li>
<li>Rate limiting middleware</li>
</ul>
<h2>Files to Create</h2>
<ul>
<li><code>src/repositories/UserRepository.ts</code></li>
<li><code>src/services/UserService.ts</code></li>
<li><code>src/routes/users.ts</code></li>
<li><code>tests/repositories/UserRepository.test.ts</code></li>
<li><code>tests/services/UserService.test.ts</code></li>
</ul>
<h2>Testing Strategy</h2>
<p>Unit tests for each service and repository. Integration tests for routes.</p>

    </main>

    <footer class="actions">
      <button class="action-button primary" data-action="approve" title="Approve plan and continue pipeline">
        <span class="codicon codicon-check"></span>
        Approve
      </button>
      <button class="action-button secondary" data-action="edit" title="Open plan file in editor">
        <span class="codicon codicon-edit"></span>
        Edit Plan
      </button>
      <button class="action-button secondary" data-action="skip" title="Skip this stage and continue">
        <span class="codicon codicon-debug-step-over"></span>
        Skip Stage
      </button>
      <button class="action-button danger" data-action="cancel" title="Cancel and abort pipeline">
        <span class="codicon codicon-close"></span>
        Cancel
      </button>
    </footer>
  </div>

  <script nonce="NONCE">
    
    (function() {
      const vscode = acquireVsCodeApi();

      // Handle button clicks
      document.querySelectorAll('.action-button').forEach(button => {
        button.addEventListener('click', () => {
          const action = button.getAttribute('data-action');
          if (action) {
            vscode.postMessage({
              type: 'action',
              action: action
            });
          }
        });
      });

      // Handle keyboard shortcuts
      document.addEventListener('keydown', (e) => {
        // Enter = Approve
        if (e.key === 'Enter' && !e.shiftKey && !e.ctrlKey && !e.metaKey) {
          vscode.postMessage({ type: 'action', action: 'approve' });
        }
        // Escape = Cancel
        if (e.key === 'Escape') {
          vscode.postMessage({ type: 'action', action: 'cancel' });
        }
      });

      // Handle content updates from extension
      window.addEventListener('message', event => {
        const message = event.data;
        if (message.type === 'update') {
          const contentEl = document.getElementById('planContent');
          if (contentEl) {
            contentEl.innerHTML = message.content;
          }
        }
      });
    })();
  
  </script>
</body>
</html>"
`;

exports[`getApprovalDialogHtml snapshots (Issue #1242) > plan content rendered — feature-planning stage 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta http-equiv="Content-Security-Policy" content="default-src 'none'; style-src test-csp 'unsafe-inline'; script-src 'nonce-NONCE';">
  <title>Review Plan #42</title>
  <style>
    
    :root {
      --spacing-xs: 4px;
      --spacing-sm: 8px;
      --spacing-md: 16px;
      --spacing-lg: 24px;
      --spacing-xl: 32px;
      --border-radius: 4px;
    }

    * {
      box-sizing: border-box;
      margin: 0;
      padding: 0;
    }

    body {
      font-family: var(--vscode-font-family);
      font-size: var(--vscode-font-size);
      color: var(--vscode-foreground);
      background: var(--vscode-editor-background);
      line-height: 1.6;
      padding: 0;
      margin: 0;
      height: 100vh;
      display: flex;
      flex-direction: column;
    }

    .approval-dialog {
      display: flex;
      flex-direction: column;
      height: 100%;
      max-width: 900px;
      margin: 0 auto;
      padding: var(--spacing-md);
    }

    /* Header */
    .dialog-header {
      padding-bottom: var(--spacing-md);
      border-bottom: 1px solid var(--vscode-panel-border);
      margin-bottom: var(--spacing-md);
    }

    .dialog-header h1 {
      font-size: 1.4em;
      font-weight: 600;
      color: var(--vscode-foreground);
      display: flex;
      align-items: center;
      gap: var(--spacing-sm);
    }

    .dialog-header h1 .codicon {
      color: var(--vscode-symbolIcon-fieldForeground);
    }

    .stage-info {
      margin-top: var(--spacing-sm);
      color: var(--vscode-descriptionForeground);
      font-size: 0.9em;
    }

    .stage-badge {
      display: inline-block;
      background: var(--vscode-badge-background);
      color: var(--vscode-badge-foreground);
      padding: 2px 8px;
      border-radius: var(--border-radius);
      font-weight: 500;
      font-size: 0.85em;
    }

    /* Plan Content */
    .plan-content {
      flex: 1;
      overflow-y: auto;
      padding: var(--spacing-md);
      background: var(--vscode-editor-background);
      border: 1px solid var(--vscode-panel-border);
      border-radius: var(--border-radius);
      margin-bottom: var(--spacing-md);
    }

    /* Markdown Styling */
    .plan-content h1,
    .plan-content h2,
    .plan-content h3,
    .plan-content h4,
    .plan-content h5,
    .plan-content h6 {
      margin-top: var(--spacing-lg);
      margin-bottom: var(--spacing-sm);
      font-weight: 600;
      color: var(--vscode-foreground);
    }

    .plan-content h1 { font-size: 1.5em; border-bottom: 1px solid var(--vscode-panel-border); padding-bottom: var(--spacing-sm); }
    .plan-content h2 { font-size: 1.3em; }
    .plan-content h3 { font-size: 1.1em; }
    .plan-content h4 { font-size: 1em; }

    .plan-content h1:first-child,
    .plan-content h2:first-child,
    .plan-content h3:first-child {
      margin-top: 0;
    }

    .plan-content p {
      margin-bottom: var(--spacing-md);
    }

    .plan-content ul,
    .plan-content ol {
      margin-bottom: var(--spacing-md);
      padding-left: var(--spacing-lg);
    }

    .plan-content li {
      margin-bottom: var(--spacing-xs);
    }

    .plan-content li input[type="checkbox"] {
      margin-right: var(--spacing-sm);
    }

    .plan-content a {
      color: var(--vscode-textLink-foreground);
      text-decoration: none;
    }

    .plan-content a:hover {
      text-decoration: underline;
    }

    .plan-content code {
      font-family: var(--vscode-editor-font-family);
      font-size: 0.9em;
      background: var(--vscode-textCodeBlock-background);
      padding: 2px 6px;
      border-radius: 3px;
    }

    .plan-content pre {
      background: var(--vscode-textCodeBlock-background);
      padding: var(--spacing-md);
      border-radius: var(--border-radius);
      overflow-x: auto;
      margin-bottom: var(--spacing-md);
    }

    .plan-content pre code {
      background: transparent;
      padding: 0;
      font-size: 0.85em;
      line-height: 1.5;
    }

    .plan-content blockquote {
      border-left: 4px solid var(--vscode-textBlockQuote-border);
      padding-left: var(--spacing-md);
      margin: var(--spacing-md) 0;
      color: var(--vscode-textBlockQuote-foreground);
    }

    .plan-content table {
      border-collapse: collapse;
      width: 100%;
      margin-bottom: var(--spacing-md);
    }

    .plan-content th,
    .plan-content td {
      border: 1px solid var(--vscode-panel-border);
      padding: var(--spacing-sm) var(--spacing-md);
      text-align: left;
    }

    .plan-content th {
      background: var(--vscode-editorWidget-background);
      font-weight: 600;
    }

    .plan-content tr:nth-child(even) {
      background: var(--vscode-list-hoverBackground);
    }

    .plan-content hr {
      border: none;
      border-top: 1px solid var(--vscode-panel-border);
      margin: var(--spacing-lg) 0;
    }

    .plan-content img {
      max-width: 100%;
      height: auto;
    }

    /* Actions Footer */
    .actions {
      display: flex;
      gap: var(--spacing-sm);
      padding-top: var(--spacing-md);
      border-top: 1px solid var(--vscode-panel-border);
      flex-wrap: wrap;
    }

    .action-button {
      display: inline-flex;
      align-items: center;
      gap: var(--spacing-sm);
      padding: var(--spacing-sm) var(--spacing-md);
      border: none;
      border-radius: var(--border-radius);
      font-family: var(--vscode-font-family);
      font-size: var(--vscode-font-size);
      cursor: pointer;
      transition: background-color 0.15s, opacity 0.15s;
    }

    .action-button:hover {
      opacity: 0.9;
    }

    .action-button:active {
      opacity: 0.8;
    }

    .action-button:focus {
      outline: 2px solid var(--vscode-focusBorder);
      outline-offset: 2px;
    }

    .action-button.primary {
      background: var(--vscode-button-background);
      color: var(--vscode-button-foreground);
    }

    .action-button.primary:hover {
      background: var(--vscode-button-hoverBackground);
    }

    .action-button.secondary {
      background: var(--vscode-button-secondaryBackground);
      color: var(--vscode-button-secondaryForeground);
    }

    .action-button.secondary:hover {
      background: var(--vscode-button-secondaryHoverBackground);
    }

    .action-button.danger {
      background: var(--vscode-inputValidation-errorBackground);
      color: var(--vscode-inputValidation-errorForeground);
      border: 1px solid var(--vscode-inputValidation-errorBorder);
    }

    .action-button.danger:hover {
      opacity: 0.85;
    }

    /* Codicon placeholder - using unicode for icons */
    .codicon::before {
      font-family: codicon;
      font-size: 14px;
    }

    .codicon-check::before { content: "\\eab2"; }
    .codicon-edit::before { content: "\\ea73"; }
    .codicon-debug-step-over::before { content: "\\eb09"; }
    .codicon-close::before { content: "\\ea76"; }
    .codicon-checklist::before { content: "\\eb02"; }

    /* Responsive */
    @media (max-width: 600px) {
      .actions {
        flex-direction: column;
      }

      .action-button {
        width: 100%;
        justify-content: center;
      }
    }
  
  </style>
</head>
<body>
  <div class="approval-dialog">
    <header class="dialog-header">
      <h1>
        <span class="codicon codicon-checklist"></span>
        Review Plan for Issue #42
      </h1>
      <p class="stage-info">
        <span class="stage-badge">Feature Planning</span>
        requires approval before continuing
      </p>
    </header>

    <main class="plan-content" id="planContent">
      <h1>Implementation Plan</h1>
<h2>Approach</h2>
<p>Add a new PhotoService to handle file uploads.</p>
<h2>Files to Modify</h2>
<ul>
<li><code>src/services/PhotoService.ts</code> (create)</li>
<li><code>src/routes/photo.ts</code> (create)</li>
</ul>
<h2>Acceptance Criteria</h2>
<ul>
<li><input disabled="" type="checkbox"> Upload endpoint accepts multipart/form-data</li>
<li><input disabled="" type="checkbox"> Files stored in S3 with UUID keys</li>
<li><input disabled="" type="checkbox"> Returns signed URL on success</li>
</ul>

    </main>

    <footer class="actions">
      <button class="action-button primary" data-action="approve" title="Approve plan and continue pipeline">
        <span class="codicon codicon-check"></span>
        Approve
      </button>
      <button class="action-button secondary" data-action="edit" title="Open plan file in editor">
        <span class="codicon codicon-edit"></span>
        Edit Plan
      </button>
      <button class="action-button secondary" data-action="skip" title="Skip this stage and continue">
        <span class="codicon codicon-debug-step-over"></span>
        Skip Stage
      </button>
      <button class="action-button danger" data-action="cancel" title="Cancel and abort pipeline">
        <span class="codicon codicon-close"></span>
        Cancel
      </button>
    </footer>
  </div>

  <script nonce="NONCE">
    
    (function() {
      const vscode = acquireVsCodeApi();

      // Handle button clicks
      document.querySelectorAll('.action-button').forEach(button => {
        button.addEventListener('click', () => {
          const action = button.getAttribute('data-action');
          if (action) {
            vscode.postMessage({
              type: 'action',
              action: action
            });
          }
        });
      });

      // Handle keyboard shortcuts
      document.addEventListener('keydown', (e) => {
        // Enter = Approve
        if (e.key === 'Enter' && !e.shiftKey && !e.ctrlKey && !e.metaKey) {
          vscode.postMessage({ type: 'action', action: 'approve' });
        }
        // Escape = Cancel
        if (e.key === 'Escape') {
          vscode.postMessage({ type: 'action', action: 'cancel' });
        }
      });

      // Handle content updates from extension
      window.addEventListener('message', event => {
        const message = event.data;
        if (message.type === 'update') {
          const contentEl = document.getElementById('planContent');
          if (contentEl) {
            contentEl.innerHTML = message.content;
          }
        }
      });
    })();
  
  </script>
</body>
</html>"
`;
